--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "express": "~4.7.0",
     "body-parser": "~1.5.0",
     "mongodb": "~1.3.23",
-    "phantom": "0.6.x"
+    "phantom": "0.6.x",
+    "aws-sdk":"2.0.x",
+    "MD5":"1.2.x"
   }
 }
