--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "dependencies": {
     "logfmt": "~1.1.1",
     "express": "~4.7.0",
+    "ejs": "~0.7.1",
+    "asset-pipeline": "~0.3.2",
     "body-parser": "~1.5.0",
     "mongodb": "~1.3.23",
     "phantom": "0.6.x",
